[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"
authors = ["Quinn Wilton <quinn@quinnwilton.com>"]

[dev-dependencies]
cid = { version = "0.10.0", features = ["serde-codec"] }
futures = { version = "0.3.0", features = ["thread-pool"] }
rhizomedb = { path = "../rhizomedb", version = "0.1" }
rhizomedb-tokio = { path = "../rhizomedb-tokio", version = "0.1" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }

tokio = { version = "1.0.0", features = ["full", "tracing"] }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7.0", features = ["full"] }

[[example]]
name = "kv"
path = "kv.rs"
