[package]
name = "rhizome-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
gloo = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
num_cpus = "1.13"
once_cell = "1"
tokio = { version = "1.21.1", features = ["rt", "time"] }
tokio-stream = { version = "0.1", features = ["time"] }
