[package]
name = "rhizome-tokio"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 or MIT"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
cid = { version = "0.10.0", features = ["serde-codec"] }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
num_cpus = "1.15"
once_cell = "1.17"
rhizome = { path = "../rhizome", version = "0.1" }
rhizome-runtime = { path = "../rhizome-runtime", version = "0.1" }
tokio = { version = "1.19", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
serde_json = "1.0"
tokio-tungstenite = "0.18"
tungstenite = "0.18"
