[package]
name = "rhizome"
version = "0.1.0"
description = ""
keywords = []
categories = []
include = ["/src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "Apache-2.0 or MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.64"
documentation = "https://docs.rs/rhizome"
repository = "https://github.com/rhizomedb/rs-rhizome/tree/main/rhizome"
authors = ["Quinn Wilton <quinn@quinnwilton.com>"]

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
cid = { version = "0.10.0", features = ["serde-codec"] }
derive_more = "0.99"
futures = "0.3"
im = { version = "15.1.0", features = ["serde"] }
libipld = { version = "0.16", features = ["serde-codec"] }
nom = "7.1.1"
once_cell = "1.17"
paste = { version = "1.0" }
petgraph = { version = "0.6", features = ["graphmap"] }
pretty = "0.12.0"
proptest = { version = "1.0", optional = true }
rhizome-runtime = { path = "../rhizome-runtime", version = "0.1" }
serde = { version = "1.0", features = ["rc", "derive"] }
serde_ipld_dagcbor = "0.2.2"
slotmap = { version = "1.0" }
string-interner = "0.14"
thiserror = "1.0"
tracing = "0.1"
zerovec = { version = "0.9", features = ["serde", "derive"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
proptest = { version = "1.0" }
tempfile = { version = "3.3" }

[features]
default = []
test_utils = ["proptest"]
