[package]
name = "rhizomedb-macro"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 or MIT"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"
proc-macro-crate = "1.3.1"

[dev-dependencies]
pretty_assertions = "1.3.0"
